# budget

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini
backend/apps/api/v1/: urls.py
backend/apps/api/v1/budget_api/: serializers.py  views.py
backend/apps/budget/: apps.py  mcc.xls  models.py  urls.py  views.py
backend/apps/budget/tests/: conftest.py  test_models.py
backend/server/: urls.py
backend/server/settings/: __init__.py
backend/server/settings/components/: common.py  database.py
backend/templates/: drop.html
backend/templates/registration/: login.html  registration.html
budget/: .pre-commit-config.yaml  README.md  manage.py  mcc.xls  pyproject.toml  urls.py
budget/API/v1/: urls.py
budget/API/v1/budget_api/: serializers.py  views.py
budget/backend/apps/api/v1/: urls.py
budget/backend/apps/api/v1/budget_api/: serializers.py  views.py
budget/backend/apps/budget/: asgi.py  forms.py  models.py  urls.py  views.py  wsgi.py
budget/backend/apps/budget/migrations/: 0001_initial.py  0002_alter_statement_date.py  0003_alter_statement_category.py
budget/backend/apps/budget/static/css/: budget.css
budget/backend/server/: urls.py  wsgi.py
budget/backend/server/settings/: __init__.py
budget/backend/server/settings/components/: common.py
budget/backend/templates/: csv_upload.html  drop.html  edit.html  home.html
budget/budget/: forms.py  serializers.py  settings.py  urls.py  views.py
budget/budget/migrations/: 0001_initial.py  0002_alter_statement_date.py  0003_alter_statement_category.py
budget/budget/settings/components/: common.py  database.py
budget/budget/templates/: base.html  categories_list.html  csv_upload.html  edit.html  home.html
budget/budget/templates/registration/: registration.html
budget/frontend/templates/: home.html
