[tool.poetry]
name = "budget"
version = "0.1.0"
description = "simple budget app for personal use"
authors = ["VF"]
readme = "README.md"
packages = [
    { include = "*" },
]

[tool.poetry.dependencies]
python = "^3.11"
django = '4.2.4'
django-split-settings = "^1.2.0"
djangorestframework = "^3.14.0"
django-rest-swagger = "^2.2.0"
drf-spectacular = "^0.27.1"
django-extra-checks = "^0.14.0"
psycopg2 = "^2.9.9"
pandas = "^2.2.1"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.3"
pre-commit = "^3.6.2"
django-stubs = "^4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = './budget'
plugins = ["mypy_django_plugin.main", 'mypy_drf_plugin.main']
strict_optional = 'True'
exclude = ["budget/backend/apps/budget/models.py"]

[mypy.plugins.django-stubs]
django_settings_module = "backend.server.settings"

[tool.django-stubs]
django_settings_module = "backend.server.settings"
